MachineSettingsModal: Fixed overflow issue.

--- a/client/Core/styl/resurrection.styl
+++ b/client/Core/styl/resurrection.styl
@@ -504,6 +504,7 @@ div.nominateicon
 
   background              #fafafa !important
   border-color            #fafafa !important
+  overflow-y              scroll
 
   .kdmodal-title
     hidden()
